# perihelion-templates

.devcontainer/base/go/: Dockerfile
.devcontainer/base/java/: Dockerfile
.devcontainer/base/nodejs/: Dockerfile
.devcontainer/base/python/: Dockerfile
.devcontainer/base/rust/: Dockerfile
.github/workflows/: base-images.yml
docker/base-images/: README.md
docker/base-images/java/: Dockerfile
docker/base-images/node/: Dockerfile
docker/base-images/python/: Dockerfile
docker/base-images/tests/: test_base_images.sh
docker/multi-stage/go/: Dockerfile
docker/multi-stage/rust/: Dockerfile
frontend/angular/: .eslintrc.json  .prettierrc  README.md  angular.json  package.json  tsconfig.json
frontend/angular/.devcontainer/: devcontainer.json
frontend/lit/: .eslintrc.json  .prettierrc  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
frontend/lit/.devcontainer/: devcontainer.json
frontend/lit/test/: setup.ts
frontend/react/: .eslintrc.json  README.md  package.json  tsconfig.json  vite.config.ts
frontend/react/.devcontainer/: devcontainer.json
frontend/svelte/: .eslintrc.json  .prettierrc  README.md  package.json  tsconfig.json
frontend/svelte/.devcontainer/: devcontainer.json
frontend/vue/: .eslintrc.json  .prettierrc  README.md  package.json  tsconfig.json  vite.config.ts
frontend/vue/.devcontainer/: devcontainer.json
frontend/vue/tests/: setup.ts
infrastructure/: README.md
infrastructure/ansible/: README.md  ansible.cfg  site.yml
infrastructure/ansible/inventory/: sample-inventory.yml
infrastructure/argocd/: README.md
infrastructure/argocd/templates/: application.yaml  project.yaml  rbac.yaml
infrastructure/helm/secure-app/: Chart.yaml  README.md  values.yaml
infrastructure/kubernetes/: README.md
infrastructure/kubernetes/base/: kustomization.yaml
infrastructure/terraform/: README.md
infrastructure/terraform/providers/: README.md
java/cli/: README.md  pom.xml
java/cli/.devcontainer/: Dockerfile  devcontainer.json
java/web-service/: README.md  pom.xml
java/web-service/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  (+1 more)
python/cli/: README.md
python/web-service/: .env.example  README.md  docker-compose.yml
rust/cli/: Cargo.toml  README.md
rust/cli/.devcontainer/: Dockerfile  devcontainer.json
rust/cli/.github/workflows/: ci.yml
rust/cli/benches/: benchmarks.rs
rust/cli/src/: main.rs
rust/cli/tests/: cli.rs
rust/web-service/: Cargo.toml  README.md
rust/web-service/.devcontainer/: Dockerfile  devcontainer.json
rust/web-service/.github/workflows/: ci.yml
rust/web-service/benches/: benchmarks.rs
rust/web-service/src/: config.rs  db.rs  error.rs  main.rs  telemetry.rs
rust/web-service/tests/: api.rs
(+111 files in other folders)
