[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Zervas"]
license = "MIT"
description = "A template for creating secure Rust CLI applications"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
secrecy = "0.8"
zeroize = "1.7"

[dev-dependencies]
criterion = "0.5"
test-case = "3.3"
mockall = "0.12"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
panic = "unwind"

[[bench]]
name = "benchmarks"
harness = false
